@@ -18,3 +18,4 @@
 05/03/2005: Schnyder orientation was not displaying the orientation.
 09/03/2005: Corrected a bug that could occur while saving a tgf file.	
 11/03/2005: Now the zoom keeps the graph on a grid if any.
+16/03/2005: Added in the file menu an option to start the server.
